# AI-Code-Integrity-Auditor

./: .gitignore  GEMINI.md  LICENSE  README.md  app.py  requirements.txt
backend/: app.py  pyproject.toml  requirements.txt
backend/api/: main.py
backend/src/: charts.py  paths.py  reporter.py
backend/src/core/: constants.py  models.py
backend/src/scanner/: engine.py  json.py  python.py
backend/tests/: test_python_scanner.py
data/uploads/: .gitignore
data/uploads/scan_20260320_131220/: __init__.py  run_pipeline.py
data/uploads/scan_20260320_131228/: __init__.py  aggregation.py  alerts.py  charts.py  conftest.py  integrity.py  loader.py  paper_signals.py  reports.py  signals.py
data/uploads/scan_20260320_164047/: app.py
frontend/: package-lock.json  package.json
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: results.tsx  uploader.tsx
frontend/src/components/ui/: button.tsx  card.tsx
frontend/src/lib/: api.ts
output/reports/: report_scan_20260320_131158.html  report_scan_20260320_131158.json  report_scan_20260320_131209.html  report_scan_20260320_131209.json  report_scan_20260320_131220.html  report_scan_20260320_131220.json  report_scan_20260320_131228.html  report_scan_20260320_131228.json  report_scan_20260320_164047.html  report_scan_20260320_164047.json
paper/: AI_Code_Integrity_Auditor_APA.docx  AI_Code_Integrity_Auditor_APA.md
src/: charts.py  paths.py  reporter.py  scanner.py
