[project]
name = "acia"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.7.0",
    "streamlit>=1.35.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "python-multipart>=0.0.9",
    "pytest>=8.0.0",
]
